{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 82,
  "lineage": "daebad8a-29ff-22e5-07df-5e8e4e04f6f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance_20221021",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d593311db5abb72b",
            "arn": "arn:aws:ec2:us-west-2:937249386082:instance/i-05ab7629ae8259577",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05ab7629ae8259577",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0297c795e44310acf",
            "private_dns": "ip-10-0-0-54.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.54",
            "public_ip": "34.220.193.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ceb95515eeee416c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023342be83562f157",
            "tags": {
              "Name": "instance-20221021"
            },
            "tags_all": {
              "Name": "instance-20221021"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03fc71663bb4d68b4"
            ]
          },
          "dependencies": [
            "aws_security_group.securityGroup_20221021",
            "aws_subnet.subnetPublic_20221021",
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpcWebGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:internet-gateway/igw-0ec6c1a128f9a65f3",
            "id": "igw-0ec6c1a128f9a65f3",
            "owner_id": "937249386082",
            "tags": {
              "Name": "vpc-web-gateway"
            },
            "tags_all": {
              "Name": "vpc-web-gateway"
            },
            "vpc_id": "vpc-0e99736625c4fe2b2"
          },
          "dependencies": [
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vpcPrivateNat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0e28b6ec5edbdc0d9",
            "network_interface_id": "eni-03cdc0702b3852141",
            "private_ip": "10.0.1.34",
            "subnet_id": "subnet-05ec4c556a8dd3a55",
            "tags": {
              "Name": "vpc-private-Nat"
            },
            "tags_all": {
              "Name": "vpc-private-Nat"
            }
          },
          "dependencies": [
            "aws_subnet.subnetPrivate_20221021-01",
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:route-table/rtb-0cf167385b6aa5876",
            "id": "rtb-0cf167385b6aa5876",
            "owner_id": "937249386082",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ec6c1a128f9a65f3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99736625c4fe2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpcWebGateway",
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSubnetRouteTableAssociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081f0cd4093bbd553",
            "route_table_id": "rtb-0cf167385b6aa5876",
            "subnet_id": "subnet-023342be83562f157"
          },
          "dependencies": [
            "aws_internet_gateway.vpcWebGateway",
            "aws_route_table.publicRouteTable",
            "aws_subnet.subnetPublic_20221021",
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securityGroup_20221021",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:security-group/sg-03fc71663bb4d68b4",
            "description": "SecurityGroupThursday allows tls usw.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fc71663bb4d68b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "securityGroup-20221021",
            "name_prefix": "",
            "owner_id": "937249386082",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-20221021"
            },
            "tags_all": {
              "Name": "security-group-20221021"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e99736625c4fe2b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPrivate_20221021-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:subnet/subnet-05ec4c556a8dd3a55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ec4c556a8dd3a55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937249386082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-private-20221021-01"
            },
            "tags_all": {
              "Name": "subnet-private-20221021-01"
            },
            "vpc_id": "vpc-0e99736625c4fe2b2"
          },
          "dependencies": [
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPublic_20221021",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:subnet/subnet-023342be83562f157",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023342be83562f157",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "937249386082",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-public-20221021-01"
            },
            "tags_all": {
              "Name": "subnet-public-20221021-01"
            },
            "vpc_id": "vpc-0e99736625c4fe2b2"
          },
          "dependencies": [
            "aws_vpc.vpc_20221021"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_20221021",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:937249386082:vpc/vpc-0e99736625c4fe2b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3ca26ed68a3321f",
            "default_route_table_id": "rtb-0657d872750569fd2",
            "default_security_group_id": "sg-00d451a72551ae26c",
            "dhcp_options_id": "dopt-067b730e724ee7248",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e99736625c4fe2b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0657d872750569fd2",
            "owner_id": "937249386082",
            "tags": {
              "Name": "vpc-20221021"
            },
            "tags_all": {
              "Name": "vpc-20221021"
            }
          }
        }
      ]
    }
  ]
}